--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "backend",
+  "name": "expense-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vinaypunani/expense-tracker.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Vinaypunani/expense-tracker/issues"
+  },
+  "homepage": "https://github.com/Vinaypunani/expense-tracker#readme"
 }
